# Aimax

./: README.md
Backend/anchor/aimax/: Anchor.toml
Backend/anchor/aimax/programs/aimax/: Cargo.toml
Backend/anchor/aimax/programs/aimax/src/: lib.rs  messages.rs  receiver.rs
Backend/anchor/aimax/programs/aimax/src/receiver/: context.rs  get_lastest_messages.rs  mod.rs  receiver.rs  state.rs  withdrwa_tokens.rs
Backend/anchor/aimax/programs/aimax/src/sender/: context.rs  mod.rs  sender.rs  state.rs  token.rs
Banked/anchor/aimax/: Anchor.toml  Cargo.toml  package-lock.json  package.json
Banked/anchor/aimax/programs/aimax_receiver/: Cargo.toml
Banked/anchor/aimax/programs/aimax_receiver/src/: constants.rs  error.rs  events.rs  lib.rs
Banked/anchor/aimax/programs/aimax_receiver/src/instructions/: mod.rs  withdraw_tokens.rs
Banked/anchor/aimax/programs/aimax_sender/: Cargo.toml
Banked/anchor/aimax/programs/aimax_sender/src/: context.rs  lib.rs  state.rs  tokens.rs
Banked/anchor/aimax/tests/: aimax.ts  aimax_receiver.ts
